tests/error/array_no_member.gw
#! [contains] has no member
var int[2][2] i;
i[0].test;
